added products to home page

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@
   --color-um-athens-gray: #f2f4f7;
   --color-um-nero: #ffffff;
   --color-um-boulder: #757575;
+  --color-um-diesel: #ffff00;
 }
 
 button {
